ui/scss/component/_main.scss
/* ... */
.main__channel-creation {
  margin-left: auto;
  margin-right: auto;
  max-width: 32rem;
}

// Temp hacks until 'section__actions--no-margin' is generic again.
.main__discover {
  .section__actions--no-margin {
    @media (max-width: $breakpoint-small) {
      width: unset; // It was being set to '100%' at the base level.
    }
  }
}

// Temp hacks until 'section__actions--no-margin' is generic again.
.main__channelsFollowing {
  .section__actions--no-margin {
    @media (max-width: $breakpoint-small) {
      text-align: left; // It was forced to 'right' at the base level.
      .button--secondary {
        width: unset; // It was being set to '100%' at the base level.
      }
    }
  }
}

.main-wrapper--scrollbar {
  // The W3C future standard; currently supported by Firefox only.
  // It'll hopefully auto fallback to this when 'webkit-scrollbar' below is deprecated in the future.
  scrollbar-width: 6px;
  scrollbar-color: var(--color-scrollbar-thumb-bg) var(--color-scrollbar-track-bg);
}

.main-wrapper--scrollbar *::-webkit-scrollbar {
  width: 6px;
  height: 6px;
}

.main-wrapper--scrollbar *::-webkit-scrollbar-track {
  background: var(--color-scrollbar-track-bg);
}

.main-wrapper--scrollbar *::-webkit-scrollbar-thumb {
  // Don't set 'border-radius' because Firefox's 'scrollbar-xx'
  // standard currently doesn't support it. Stick with square
  // scrollbar for all browsers.
  background-color: var(--color-scrollbar-thumb-bg);
}

